--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-A agenda 3 é a terceira parte de um projeto criado durante os cursos da Alura. Aqui fazemos uso de fragments, a api 
-do google maps e até um serviço de geolocalização(GPS).
+A agenda 3 é a terceira parte de um projeto criado durante os cursos da Alura. Aqui fazemos uso de fragments, a api do google maps e até um serviço de geolocalização(GPS).
